# UR_Robotiq_ROS2

./: README.md  required.repos
ur_robotiq_control/: CMakeLists.txt  package.xml
ur_robotiq_control/config/: ur_robotiq_controllers.yaml
ur_robotiq_control/launch/: start_robot.launch.py
ur_robotiq_description/: CMakeLists.txt  LICENSE  package.xml  required.repos
ur_robotiq_description/launch/: view_robot.launch.py
ur_robotiq_description/rviz/: view_robot.rviz
ur_robotiq_description/urdf/: ur_robotiq.urdf.xacro  ur_robotiq_macro.xacro
ur_robotiq_moveit_config/: CMakeLists.txt  package.xml
ur_robotiq_moveit_config/config/: controllers.yaml  kinematics.yaml  ur_robotiq_servo.yaml
ur_robotiq_moveit_config/launch/: moveit.launch.py
ur_robotiq_moveit_config/rviz/: view_robot.rviz
ur_robotiq_moveit_config/srdf/: ur_robotiq.srdf.xacro  ur_robotiq_macro.srdf.xacro
